--- a/manuscript/PUMP_Manuscript.tex
+++ b/manuscript/PUMP_Manuscript.tex
@@ -1839,12 +1839,13 @@ many there are and how predictive they are:
 
 Given the above, we might wonder how power shifts if we change our
 design parameters. For some discussion of what parameters will affect
-power more generally, see Dong and Maynard (2013).
-\textcolor{red}{KH comment: this sentence is repetitive from above
-For discussion of how design parameters can affect the overall power in the multiple testing context, especially with regards to the overall power measures such as $1-$minimal or complete power, see @Porter2018; the findings there are general, as they are a function of the final distribution of test statistics.}
-The key insight is that power is a function of only a few summarizing
-elements: the individual-level standard errors, the degrees of freedom,
-and the correlation structure of the test statistics. Once we have these
+power more generally, see Dong and Maynard (2013). For discussion of how
+design parameters can affect the overall power in the multiple testing
+context, especially with regards to the overall power measures such as
+\(1-\)minimal or complete power, see Porter (2018). The key insight is
+that power is a function of only a few summarizing elements: the
+individual-level standard errors, the degrees of freedom, and the
+correlation structure of the test statistics. Once we have these
 elements, regardless of the design, we can proceed.
 
 Within the pump package we have two general ways of exploring design
@@ -2335,5 +2336,114 @@ We do not vary:
   between covariates, residuals, impacts, random effects for all levels
   and across all outcomes
 \end{itemize}
+
+\subsection{Validation results}
+
+Below is an example of a graph we use for validation. The red dot is the
+PUM estimate of power, the green dot is the \texttt{PowerUpR} estimate
+of power, and the 95\% confidence intervals based on the monte carlo
+simulations are shown in blue. To validate that \texttt{PUMP} produces
+the expected result, we want to see the red and green points match, and
+for the red point to be within the blue intervals. The plot shows the
+results across different types of power and different MTPs. We repeat
+this graph for each set of parameters for each design.
+
+\begin{figure}
+  \includegraphics[width=\linewidth]{example_validation_plot.png}
+\end{figure}
+
+Next, we validate MDES and sample size calculations. We put in our found
+power, and then see if the \texttt{pump\_mdes()} function returns the
+MDES we originally plugged in to achieve this power. The first column
+shows the calculated MDES, the middle column is the power we plugged
+into the calculation, and the last column shows the MDES that we are
+targeting. Thus, ideally we want the first and last columns to match.
+
+\begin{tabular}{l|r|r|r}
+\hline
+MTP & Adjusted MDES & D1indiv Power & Target MDES\\
+\hline
+Bonferroni & 0.122 & 0.447 & 0.125\\
+\hline
+BH & 0.127 & 0.578 & 0.125\\
+\hline
+Holm & 0.125 & 0.540 & 0.125\\
+\hline
+\end{tabular}
+
+Similarly, we validate our sample size calculations. Using our found
+power, we see if \texttt{pump\_sample()} returns the original sample
+size. Below, we are targeting a sample size of \(J = 20\).
+
+\begin{tabular}{l|l|r|r}
+\hline
+MTP & Sample.type & Sample.size & D1indiv.power\\
+\hline
+Bonferroni & J & 21 & 0.500\\
+\hline
+BH & J & 21 & 0.580\\
+\hline
+Holm & J & 20 & 0.544\\
+\hline
+\end{tabular}
+
+\hypertarget{westfall-young-procedures}{%
+\subsection{Westfall-Young procedures}\label{westfall-young-procedures}}
+
+The Westfall-Young procedure was validated separately due to its unique
+complications and computational burden.
+
+First, we wrote a series of careful unit tests ensuring that our code
+worked as expected for each step of the WY procedure. One of these tests
+compared results from our procedure to the WY procedure in the multtest
+package, and found it matched quite well.
+
+Second, we also tested the WY procedures using the same simulation
+procedure described above. For constant effect and fixed effect models,
+the power estimation matches between PUM and the simulations. However,
+for random effects models, the two methods diverge in some cases. We
+find that the simulated power matches the \texttt{PUMP}-calculated power
+only when (1) there is a large number of blocks/clusters, and (2) the
+user has a large number of WY permutations. Below, we discuss the
+single-step procedure because it is simpler, although the same concepts
+hold for the step-down procedure. Although it is difficult to verify why
+this discrepancy occurs, our hypothesis is that this behavior occurs due
+to the combination of the sensitivity of the WY procedure, and the
+instability of the random effects model.
+
+The goal of the WY procedure is to estimate the adjusted \(p\)-value for
+outcome \(i\)
+\[\tilde{p}_i = Pr\left(\min_{1 \leq j \leq k} P_j \leq p_i \mid H_0^C\right).\]
+where \(P_j\) is a random variable representing a \(p\)-value for
+outcome \(j\), and lowercase \(p_i\) is the observed realization for
+outcome \(i\). We assume a set of \(k\) tests with corresponding null
+hypotheses \(H_{0i}\) for \(i = 1, \cdots, k\). The complete null
+hypothesis is the setting where all the null hypotheses are true:
+\(H_0^C = \cap_{i=1}^{k} H_{0i} = \{\text{all } H_i \text{are true}\}\).
+In order to estimate this \(p\)-value, the \(p\)-value is calculated
+across \(B\) permutations
+\[\tilde{p}_i = \frac{1}{B}\sum_{b = 1}^{B} \mathbb{1}(\min_{1 \leq j \leq k} p_{b,j}^\star \leq p_i).\]
+
+In order for the procedure to be correct, we should be generating the
+\(p\)-values \(P_j\) from the the true distribution of \(p\)-values
+under the null hypothesis. We generally are testing outcomes that are
+truly significant, so the observed \(p\)-values are small. Thus, looking
+at these expressions, we are concerned about tail behavior; we are
+testing whether a small observed \(p\)-value is less than the minimum of
+of the generated \(p\)-values of our multiple outcomes. This combination
+of factors means that a small discrepancy in the tails between the
+generated null distribution and the true distribution could have a large
+impact on the adjusted \(p\)-value.
+
+Given that we are relying on tail behavior, this explains why we need
+both a large number of permutations, and a large number of
+blocks/clusters. The large number of permutations is required because we
+are trying to estimate a rare event. With a significant outcome, it is
+rare that the observed \(p\)-value will be less than the minimum of
+\(p\)-values generated from the null distribution. The large number of
+blocks/clusters is required to accurately estimate the tail behavior for
+random effects models. With a small number of blocks/clusters, we may
+not properly estimate the spread of the distribution, resulting in a
+poor estimate of the tail behavior.
 
 \end{document}
